@@ -4,4 +4,5 @@ __author__ = "Ero Carrera"
 __version__ = "2.0.0.dev0"
 __license__ = "MIT"
 
+from pydot.exceptions import *
 from pydot.core import *
